# les-croute-animate

./: .gitignore  CMakeLists.txt  README.md  anim.c  anim.h  animate.mk  animate.project  audio.c  audio.h  build.sh  collisions.c  collisions.h  enumerations.h  fichiers.c  fichiers.h  fx_switch_events.c  game_scripts.c  game_scripts.h  infos.txt  main.c  mainloop.c  mainloop.h  mouvements.c  mouvements.h  niveau1_builder.csv  npc.c  npc.h  pl_mouvements.c  pl_mouvements.h  script_engine.c  script_engine.h  sdl_init_and_quit.c  sdl_init_and_quit.h  switch_events.c  switch_events.h  textures_fx.c  textures_fx.h  types_struct_defs.h
assets/levels/: level.csv  niveau1-builder.csv  niveau1_builder.csv  niveau1_builder.ods
build-scripts/: build-unix.sh  build-win.sh  webbuild.sh
cmake/: FindSDL2.cmake.bak
